# npcx490m-pac

./: .gitignore  Cargo.toml  README.md  device.x  generate.sh  npcx490m-chip.yaml
.github/workflows/: check.yml  rolling.yml
patch/: NPCX490M.yaml  adc.yaml  espi.yaml  fiu.yaml  flm.yaml  gdma.yaml  gpio.yaml  hfcg.yaml  i3c.yaml  itim32.yaml  itim64.yaml  kbc.yaml  kbs.yaml  lfcg.yaml  mdma.yaml  mft16.yaml  miwu.yaml  peci.yaml  pm.yaml  pmc.yaml  ps2.yaml  pwm.yaml  shi.yaml  shm.yaml  smb.yaml  spip.yaml  sysconfig.yaml  uart.yaml
src/: adc_eref.rs  adc_iref.rs  bbrm.rs  core2host.rs  cr_uart1.rs  cr_uart4.rs  dev.rs  eshm.rs  espi.rs  fiu_0.rs  flm.rs  gdma1.rs  gpio6.rs  hfcg.rs  i3c1.rs  i3c2.rs  itim32_3.rs  itim64.rs  kbc.rs  kbs.rs  lct.rs  lfcg.rs  lib.rs  mdc.rs  mdma6.rs  mft16_3.rs  miwu0.rs  mswc.rs  mtc.rs  otpi.rs  peci.rs  pm2.rs  pmc.rs  ps2.rs  pwm0.rs  pwm5.rs  shi.rs  shm.rs  smb0.rs  smb1.rs  (+4 more)
src/adc_eref/: adccs2.rs  adcsts.rs  ascadd.rs  atctl.rs  chn0dat.rs  chn10dat.rs  chn11dat.rs  chn12dat.rs  chn13dat.rs  chn14dat.rs  chn15dat.rs  chn16dat.rs  chn17dat.rs  chn1dat.rs  chn20dat.rs  chn21dat.rs  chn22dat.rs  chn23dat.rs  chn25dat.rs  chn29dat.rs  chn2dat.rs  chn31dat.rs  chn5dat.rs  chn7dat.rs  chn8dat.rs  chn9dat.rs  then.rs  thrctl160.rs  thrctl161.rs  thrctl162.rs  thrctl163.rs  thrctl164.rs  thrctl165.rs  thrcts.rs
src/adc_iref/: adccnf.rs  adccs1.rs  adccs2.rs  adcsts.rs  ascadd.rs  atctl.rs  chn0dat.rs  chn10dat.rs  chn12dat.rs  chn14dat.rs  chn15dat.rs  chn18dat.rs  chn19dat.rs  (+23 more)
supply-chain/: config.toml
svd/: NPCX490M.svd
(+1557 files in other folders)
